added DOM event file

--- a/index.html
+++ b/index.html
@@ -10,10 +10,19 @@
     <div id="navBar">
         <!-- <img class="image" src="./resources/images/image001.png" alt="Jefferson Logo"/> -->
         <div id="navBarTitle">Dr. Karl Doghramji</div>
-        <a class="navBarItem">Home</a>
-        <a class="navBarItem">About Dr. Doghramji</a>
-        <a class="navBarItem">New & Current Patients</a>
-        <a class="navBarItem">About Sleep Disorders</a>  
+        <a id="home" class="navBarItem">Home</a>
+        <a id="about" class="navBarItem">About Dr. Doghramji</a>
+        <a id="patients" class="navBarItem">New & Current Patients</a>
+        <a id="sleep" class="navBarItem">About Sleep Disorders</a>  
     </div>
+    <div id="contentBox">
+        <img src="./resources/images/DoghramjiKarlProfile.jpg">
+
+
+
+
+    </div>
+
+    <script type="text/javascript" src="DOMevent.js"></script>
 </body>
 </html>
