--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
         <a id="sleep" class="navBarItem">About Sleep Disorders</a>  
     </div>
     <div id="contentBox">
-        <img src="./resources/images/DoghramjiKarlProfile.jpg">
+        <img class="flexImage" src="./resources/images/DoghramjiKarlProfile.jpg">
+        <div class="contentBoxItem">KARL SAMPLE TEXT 1</div>
+        <div class="contentBoxItem">KARL SAMPLE TEXT 2</div>
+        <div class="contentBoxItem">KARL SAMPLE TEXT 3</div>
+        <div class="contentBoxItem">KARL SAMPLE TEXT 4</div>
+
 
 
 
