added some more functionality

--- a/index.html
+++ b/index.html
@@ -9,22 +9,21 @@
 <body>
     <div id="navBar">
         <!-- <img class="image" src="./resources/images/image001.png" alt="Jefferson Logo"/> -->
-        <div id="navBarTitle">Dr. Karl Doghramji</div>
+        <div id="navBarTitle">Dr. Karl <br> Doghramji</div>
         <a id="home" class="navBarItem">Home</a>
         <a id="about" class="navBarItem">About Dr. Doghramji</a>
         <a id="patients" class="navBarItem">New & Current Patients</a>
         <a id="sleep" class="navBarItem">About Sleep Disorders</a>  
     </div>
-    <div id="contentBox">
-        <img class="flexImage" src="./resources/images/DoghramjiKarlProfile.jpg">
-        <div class="contentBoxItem">KARL SAMPLE TEXT 1</div>
-        <div class="contentBoxItem">KARL SAMPLE TEXT 2</div>
-        <div class="contentBoxItem">KARL SAMPLE TEXT 3</div>
-        <div class="contentBoxItem">KARL SAMPLE TEXT 4</div>
-
-
-
-
+    <div id="majorContentContainer">
+        <img id="mainContentImage"class="contentImage" src="./resources/images/DoghramjiKarlProfile.jpg">
+        <p id="imgText">Sample Text</p>
+        <p id="majorContentContentItem">KARL SAMPLE TEXT 1</p>
+    </div>
+    <div class="flexBoxContainer">
+        <div></div>
+        <div></div>
+        <div></div>
 
     </div>
 
