added a footer and some flexbox

--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
         <p id="majorContentContentItem">KARL SAMPLE TEXT 1</p>
     </div>
     <div class="flexBoxContainer">
-        <div></div>
-        <div></div>
-        <div></div>
-
+        <div class="flexBoxItem">
+            <p>
+                SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT
+                SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT 
+                SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT
+                SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT SAMLE TEXT
+            </p>
+        </div>
+        <div class="flexBoxItem">SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT SAMPLE TEXT</div>
+        <div class="flexBoxItem">SAMPLE TEXT</div>
     </div>
-
+    <footer>
+        test     
+    </footer>
     <script type="text/javascript" src="DOMevent.js"></script>
 </body>
 </html>
